--- a/html/index.html
+++ b/html/index.html
@@ -65,6 +65,6 @@
     
 
     <!-- JavaScript -->
-    <script src="static/script.js"></script>
+    <script src="../static/script.js"></script>
 </body>
 </html>
