--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Religious Crossword</title>
-    <link rel="stylesheet" type="text/css" href="../static/styles.css">
+    <link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
 <body>
     <!-- Crossword Puzzle Grid -->
@@ -65,6 +65,6 @@
     
 
     <!-- JavaScript -->
-    <script src="../static/script.js"></script>
+    <script src="/static/script.js"></script>
 </body>
 </html>
